--- a/start.html
+++ b/start.html
@@ -77,7 +77,7 @@ body.dark #settings-menu { background: var(--card-bg-dark); border-color: #555; 
   border-radius: 8px;
   padding: 15px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.2);
-  transition: transform 0.2s;
+  transition: transform 0.2s, box-shadow 0.2s, border 0.2s;
   cursor: grab;
   user-select: none;
 }
@@ -95,9 +95,11 @@ body.dark .shortcut { background: var(--card-bg-dark); }
   opacity: 0;
   transition: opacity 0.2s;
 }
+.shortcut.show-icons { box-shadow: 0 0 15px 3px rgba(255,165,0,0.7); }
 .shortcut.show-icons .edit-icons { opacity: 1; }
+
 .shortcut .edit-icons button {
-  background: rgba(0,0,0,0.4);
+  background: rgba(0, 0, 0, 0.4);
   border: none;
   color: #fff;
   border-radius: 4px;
@@ -125,8 +127,23 @@ body.dark .shortcut { background: var(--card-bg-dark); }
   box-shadow: 0 2px 8px rgba(0,0,0,0.4);
 }
 body.dark #add-dialog form { background: var(--card-bg-dark); }
-#add-dialog input { width: 100%; margin-bottom: 10px; padding: 8px; border-radius: 5px; border: 1px solid #999; }
-#add-dialog button { margin-right: 8px; padding: 8px 12px; border: none; border-radius: 5px; cursor: pointer; }
+
+#add-dialog input {
+  width: 80%;
+  margin: 0 10%;
+  margin-bottom: 10px;
+  padding: 8px;
+  border-radius: 5px;
+  border: 1px solid #999;
+}
+
+#add-dialog button {
+  margin-right: 8px;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
 .drag-over { outline: 2px dashed #666; transform: scale(1.03); }
 </style>
 </head>
@@ -150,11 +167,11 @@ body.dark #add-dialog form { background: var(--card-bg-dark); }
 
 <div id="add-dialog">
   <form id="add-form">
-    <h3>Add Shortcut</h3>
+    <h3 id="dialog-title">Add Shortcut</h3>
     <input id="shortcut-name" type="text" placeholder="Name" required />
     <input id="shortcut-url" type="url" placeholder="URL (https://…)" required />
     <div style="text-align:right;">
-      <button type="submit">Add</button>
+      <button type="submit" id="add-save-btn">Add</button>
       <button type="button" id="cancel-add">Cancel</button>
     </div>
   </form>
@@ -170,6 +187,8 @@ const addShortcutBtn = document.getElementById('add-shortcut-btn');
 const addDialog = document.getElementById('add-dialog');
 const addForm = document.getElementById('add-form');
 const cancelAdd = document.getElementById('cancel-add');
+const addSaveBtn = document.getElementById('add-save-btn');
+const dialogTitle = document.getElementById('dialog-title');
 const importBtn = document.getElementById('import-btn');
 const exportBtn = document.getElementById('export-btn');
 
@@ -177,6 +196,7 @@ let shortcuts = JSON.parse(localStorage.getItem('shortcuts') || '[]');
 shortcuts = shortcuts.map(s => ({ name: s.name || s.title || 'Unnamed', url: s.url || s.href || '' }));
 
 let longPressTimer, isDragging = false;
+let editIndex = null; // tracks which shortcut is being edited
 
 const renderShortcuts = () => {
   shortcutsContainer.innerHTML = '';
@@ -200,13 +220,12 @@ const renderShortcuts = () => {
     editBtn.title = 'Edit';
     editBtn.onclick = e => {
       e.stopPropagation();
-      const newName = prompt('Edit shortcut name:', s.name);
-      if (newName === null) return; // Cancel pressed
-      const newUrl = prompt('Edit shortcut URL:', s.url);
-      if (newUrl === null) return;
-      shortcuts[i] = { name: newName, url: newUrl };
-      localStorage.setItem('shortcuts', JSON.stringify(shortcuts));
-      renderShortcuts();
+      editIndex = i;
+      dialogTitle.innerText = 'Edit Shortcut';
+      addSaveBtn.innerText = 'Save';
+      document.getElementById('shortcut-name').value = s.name;
+      document.getElementById('shortcut-url').value = s.url;
+      addDialog.style.display = 'flex';
     };
     const delBtn = document.createElement('button');
     delBtn.innerText = '❌';
@@ -295,19 +314,31 @@ toggleThemeBtn.addEventListener('click', () => {
   localStorage.setItem('theme', document.body.classList.contains('dark') ? 'dark' : 'light');
 });
 
-// Add shortcut
-addShortcutBtn.addEventListener('click', () => addDialog.style.display = 'flex');
+// Add/Edit Shortcut dialog
+addShortcutBtn.addEventListener('click', () => {
+  editIndex = null;
+  dialogTitle.innerText = 'Add Shortcut';
+  addSaveBtn.innerText = 'Add';
+  addForm.reset();
+  addDialog.style.display = 'flex';
+});
 cancelAdd.addEventListener('click', () => addDialog.style.display = 'none');
 addForm.addEventListener('submit', e => {
   e.preventDefault();
   const name = document.getElementById('shortcut-name').value.trim();
   const url = document.getElementById('shortcut-url').value.trim();
   if (!name || !url) return;
-  shortcuts.push({ name, url });
+
+  if (editIndex !== null) {
+    shortcuts[editIndex] = { name, url };
+  } else {
+    shortcuts.push({ name, url });
+  }
   localStorage.setItem('shortcuts', JSON.stringify(shortcuts));
   renderShortcuts();
   addDialog.style.display = 'none';
   addForm.reset();
+  editIndex = null;
 });
 
 // Export/Import
