--- a/start.html
+++ b/start.html
@@ -46,8 +46,28 @@ body.dark .shortcut{background:var(--card-bg-dark)}
 .drag-over{outline:2px dashed #666;transform:scale(1.02)}
 
 /* modal */
-#add-dialog{display:none;position:fixed;inset:0;background:rgba(0,0,0,.4);backdrop-filter:blur(5px);z-index:50;align-items:center;justify-content:center}
-#add-dialog form{background:var(--card-bg-light);color:inherit;padding:20px;border-radius:8px;min-width:280px;box-shadow:0 2px 10px rgba(0,0,0,.35)}
+#add-dialog {
+  display: none;
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,.4);
+  backdrop-filter: blur(5px);
+  z-index: 50;
+  align-items: flex-start; /* align to top instead of center */
+  justify-content: center;
+  padding-top: 10vh; /* push form down a bit from top */
+}
+
+#add-dialog form {
+  background: var(--card-bg-light);
+  color: inherit;
+  padding: 20px;
+  border-radius: 8px;
+  min-width: 280px;
+  max-width: 90vw;
+  box-shadow: 0 2px 10px rgba(0,0,0,.35);
+}
+
 body.dark #add-dialog form{background:var(--card-bg-dark)}
 #add-dialog input{width:80%;margin:0 10%;margin-bottom:10px;padding:8px;border-radius:5px;border:1px solid #999}
 #add-dialog button{margin-right:8px;padding:8px 12px;border:none;border-radius:5px;cursor:pointer}
@@ -280,8 +300,9 @@ function openEditModal(index){
   $('shortcut-name').value = shortcuts[index].name;
   $('shortcut-url').value = shortcuts[index].url;
   addDialog.style.display = 'flex';
+  setTimeout(() => $('shortcut-name').focus(), 100);
 }
-addShortcutBtn.addEventListener('click', ()=>{ editIndex=null; dialogTitle.textContent='Add Shortcut'; addSaveBtn.textContent='Add'; addForm.reset(); addDialog.style.display='flex'; });
+addShortcutBtn.addEventListener('click', ()=>{ editIndex=null; dialogTitle.textContent='Add Shortcut'; addSaveBtn.textContent='Add'; addForm.reset(); addDialog.style.display='flex'; setTimeout(() => $('shortcut-name').focus(), 100); });
 cancelAdd.addEventListener('click', ()=>{ addDialog.style.display='none'; editIndex=null; });
 addForm.addEventListener('submit', (ev)=>{ ev.preventDefault(); const name=$('shortcut-name').value.trim(); const url=$('shortcut-url').value.trim(); if(!name||!url) return; if(editIndex!==null) shortcuts[editIndex]={name,url}; else shortcuts.push({name,url}); saveAndRender(); addDialog.style.display='none'; editIndex=null; });
 
