Increases dialog font size

--- a/start.html
+++ b/start.html
@@ -66,6 +66,12 @@ body.dark .shortcut{background:var(--card-bg-dark)}
   min-width: 280px;
   max-width: 90vw;
   box-shadow: 0 2px 10px rgba(0,0,0,.35);
+  font-size: 1.25em;
+}
+
+#add-dialog input,
+#add-dialog button {
+  font-size: 1em; /* ensures inputs/buttons scale with form size */
 }
 
 body.dark #add-dialog form{background:var(--card-bg-dark)}
